--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for DBIx-FunctionalAPI
 
-0.01    2014-06-15 (SHARYANTO) (not yet released)
+0.01    2014-06-15 (SHARYANTO)
 
         - First release.
