--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for DBIx-FunctionalAPI
 
+0.02    2014-06-17 (SHARYANTO)
+
+        - No functional change.
+
+        - Some fixes.
+
+
 0.01    2014-06-15 (SHARYANTO)
 
         - First release.
