--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-FunctionalAPI
 
+0.03    2014-06-25 (SHARYANTO)
+
+        - Add completion for table name.
+
+
 0.02    2014-06-17 (SHARYANTO)
 
         - No functional change.
