--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for DBIx-FunctionalAPI
 
+0.05    2014-07-02 (SHARYANTO)
+
+        - No functional changes.
+
+        - Adjust to Complete::Util 0.12.
+
+
 0.04    2014-06-25 (SHARYANTO)
 
         - No functional changes.
