--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for DBIx-FunctionalAPI
 
+0.06    2015-01-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- Rebuild (Generate TODO.md).
+
+
 0.05    2014-07-02 (SHARYANTO)
 
         - No functional changes.
